--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="flex-kontejner">
             <div class="karta kartaleva">
-                <p class="stylized">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel metus sed nisi.
+                <p class="stylized"></p><p>Jsem Lucie Placatkova neumim pect ale stejne to budu davat na tik tok protoze mi to prijde cool a neresim hejtry.
                 </p>
 
                 <h3>Obchod s cukrovinkami </h3>
@@ -63,8 +63,22 @@
             </div>
             <div class="karta kartazprava">
             <div>
-                <h3>Cukříky</h3>
+                <h3>Miluju cukříky protoze chci mit cukrovku</h3>
             </div>
+            </div>
+            <div class="kartactvrta">
+                <h3>tuhle kartu pridelal matuli protoze placka je leva</h3>
+                <ul>
+                    <li>Sladkosti</li>
+                    <li>Čokoláda</li>
+                    <li>Bonbóny</li>
+                    <li>Žvýkačky</li>
+                    <li>Marcipán</li>
+                    <li>Sušenky</li>
+                    <li>Koláče</li>
+                    <li>Trubičky</li>
+                    <li>Ořechy</li>
+                    <li>Ovoce</li>
             </div>
         </div>
     </main>
